# code-line-analysis

./: .gitignore  AGENT.md  AGENTS.md  README.md  README.zh-CN.md  WEB_DEPLOY.md  deploy.php  package-lock.json  package.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
.github/workflows/: ci.yml  deploy-self-hosted.yml
scripts/: dev.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-commands.toml
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  types.rs  watch.rs
src-tauri/src/analysis/: file_relations.rs  mod.rs
src-tauri/src/analysis/api_routes/: helpers.rs  laravel.rs  mod.rs  next.rs
src-tauri/src/analysis/laravel_schema/: helpers.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/commands/: file.rs  folders.rs  git.rs  mod.rs  scan.rs  settings.rs  stats.rs  system.rs
src-tauri/src/db/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/parsers/: duplicate.rs  func_detect.rs  languages.rs  line_parser.rs  mod.rs  tag_scanner.rs
src-tauri/src/scan/: engine.rs  filters.rs  mod.rs  walk.rs
src-tauri/src/stats/: mod.rs
src/main/: db.ts  git.ts  index.ts  ipc.ts  stats.ts
src/main/parsers/: duplicate.ts  funcDetect.ts  languages.ts  lineParser.ts  tagScanner.ts
src/main/scanner/: fileFilters.ts  index.ts  walk.ts
src/preload/: index.ts
src/renderer/: App.tsx  i18n.tsx  index.html  main.tsx  monaco.ts  runtime.ts  styles.css  theme.tsx
src/renderer/pages/: Dashboard.tsx  (+12 more)
src/shared/: api.ts  apiRoutes.ts  fileRelations.ts  ipcChannels.ts  laravelSchema.ts
(+7 files in other folders)
