[package]
name = "code-line-analysis"
version = "0.1.0"
description = "Code Line Analysis (Tauri)"
authors = ["sam"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "code_line_analysis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
ignore = "0.4"
sha1 = "0.10"
hex = "0.4"
rayon = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
thiserror = "2"
globset = "0.4"
notify = "7"
notify-debouncer-mini = "0.5"
arboard = "3"
